# chesstui

./: .gitignore  Cargo.toml  controls.md  install.ps1  install.sh  justfile  start-server.sh
.github/workflows/: ci.yml  release.yml
ai/: CHESS_AI_DESIGN.md
ai/memory-bank/: gdd-keyboard-controls.md
ai/memory-bank/tasks/: chesstui-tasklist.md
deploy/: chesstui-server.service  deploy.sh  server.env.example  setup-server.sh
docs/: tui-design-spec.md
docs/superpowers/plans/: 2026-04-03-phase1-local-chess.md
migrations/: 001_initial.sql  002_accounts.sql
scripts/: install.ps1  install.sh  pre-commit  setup-hooks.sh  tmux_screenshot.py
src/: ai.rs  app.rs  config.rs  input.rs  lib.rs  main.rs  perf.rs  protocol.rs  theme.rs
src/engine/: difficulty.rs  evaluation.rs  integration.rs  mod.rs  opening_book.rs  personality.rs  search.rs  tables.rs
src/game/: mod.rs  move_input.rs  notation.rs  replay.rs  state.rs
src/network/: mod.rs  session.rs
src/server/: auth.rs  db.rs  game_room.rs  matchmaking.rs  mod.rs  ws.rs
src/ui/: ascii3d.rs  board.rs  board_image.rs  captured.rs  color_picker.rs  command_bar.rs  debug_panel.rs  friends.rs  game.rs  help.rs  kitty_transmit.rs  launch.rs  menu.rs  mod.rs  move_list.rs  multiplayer.rs  pieces.rs  postgame.rs  replay_viewer.rs  sprites.rs  widgets.rs
tests/: chess_rules.rs  move_input.rs  notation.rs
